# CG-2020-I

./: README.md
ejercicios/: CMakeLists.txt
ejercicios/control_practico/: control_practico.cpp
ejercicios/ejercicio04/: ejercicio04.cpp
ejercicios/ejercicio05/: ejercicio05.cpp
ejercicios/ejercicio3/: SimpleFragmentShader.fragmentshader  ejercicio3  main.cpp
